# scoutengine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-build-linux.yml  cmake-build-windows.yml  cmake-single-platform.yml
include/: clear.hpp  draw.hpp  elementbuffer.hpp  gl33context.hpp  graphicscontext.hpp  instance.hpp  instanceptr.hpp  keys.hpp  lockedinstance.hpp  platformtype.hpp  scout.hpp  scoutconfig.hpp  shader.hpp  texture.hpp  vertexarray.hpp  vertexattrib.hpp  vertexbuffer.hpp  window.hpp
include/glad/: glad.h
include/graphics/backends/gl33/: clear.hpp  draw.hpp  elementbuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp  vertexbuffer.hpp
include/platform/backends/glfw/: window.hpp
src/: clear.cpp  draw.cpp  elementbuffer.cpp  gl33context.cpp  glad.c  instance.cpp  lockedinstance.cpp  main.cpp  platformtype.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexattrib.cpp  vertexbuffer.cpp  window.cpp
src/graphics/backends/gl33/: clear.cpp  draw.cpp  elementbuffer.cpp  graphicscontext.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexattrib.cpp  vertexbuffer.cpp
src/platform/backends/glfw/: window.cpp
testProject/: main.cpp
